--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -34,9 +34,10 @@
 </p><p>Ve FreeCADu je pou&#382;it &uacute;pln&#283; stejn&yacute; koncept. N&aacute;stroje jsou p&#345;i&#345;azov&aacute;ny do pracovn&iacute;ch ploch podle &uacute;kol&#367;, ke kter&yacute;m, jsou tyto plochy ur&#269;eny.
 </p><p>P&#345;i p&#345;epnut&iacute; z jedn&eacute; pracovn&iacute; plochy na druhou se zm&#283;n&iacute; n&aacute;stroje dostupn&eacute; v rozhran&iacute;. Panely n&aacute;stroj&#367;, panely p&#345;&iacute;kaz&#367; a p&#345;&iacute;padn&#283; dal&scaron;&iacute; &#269;&aacute;sti rozhran&iacute; se p&#345;epnou na novou pracovn&iacute; plochu, ale obsah sc&eacute;ny se nezm&#283;n&iacute;. M&#367;&#382;ete nap&#345;&iacute;klad za&#269;&iacute;t kreslit 2D tvary v pracovn&iacute; plo&scaron;e Draft a pot&eacute; na nich d&aacute;le pracovat v pracovn&iacute; plo&scaron;e Part.
 </p><p>V&scaron;imn&#283;te si, &#382;e n&#283;kdy se pracovn&iacute; plocha ozna&#269;uje jako <i>Modul</i>. Pracovn&iacute; plochy a moduly jsou v&scaron;ak odli&scaron;n&eacute; entity. Modul je jak&eacute;koli roz&scaron;&iacute;&#345;en&iacute; FreeCADu, zat&iacute;mco pracovn&iacute; plocha je speci&aacute;ln&iacute; typ modulu s konfigurac&iacute; grafick&eacute;ho u&#382;ivatelsk&eacute;ho rozhran&iacute; (panely n&aacute;stroj&#367; a menu).
+</p><p><span id="Built-in_workbenches"></span>
 </p>
 <meta property="mw:PageProp/toc">
-<h2><span class="mw-headline" id="Built-in_workbenches">Built-in workbenches</span></h2>
+<h2><span id="Vestav.C4.9Bn.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Vestav&#283;n&eacute;_pracovn&iacute;_plochy">Vestav&#283;n&eacute; pracovn&iacute; plochy</span></h2>
 <h3><span class="mw-headline" id="Current">Current</span></h3>
 <div class="mw-translate-fuzzy">
 <p>Dostupn&eacute; jsou n&aacute;sleduj&iacute;c&iacute; pracovn&iacute; plochy:
@@ -101,13 +102,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224511
+Cached time: 20260111224547
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.233 seconds
-Preprocessor visited node count: 284/1000000
+CPU time usage: 0.136 seconds
+Real time usage: 0.279 seconds
+Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
 Highest expansion depth: 5/100
@@ -117,18 +118,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.349      1 -total
- 34.44%    7.696      1 Template:Userdocnavi/cs
- 18.02%    4.028      2 Template:Docnav
- 10.67%    2.385      2 Template:VersionMinus
- 10.22%    2.284      1 Template:Navigation_menu_2
-  8.94%    1.998      3 Template:Version
-  8.84%    1.975      1 Template:MenuCommand
-  8.07%    1.803      1 Template:Button
-  6.12%    1.368      5 Template:Incode
+100.00%   37.277      1 -total
+ 25.96%    9.677      1 Template:Userdocnavi/cs
+ 15.40%    5.741      3 Template:Version
+ 14.52%    5.414      5 Template:Incode
+ 13.47%    5.021      2 Template:VersionMinus
+  9.48%    3.533      2 Template:Docnav
+  9.14%    3.409      1 Template:MenuCommand
+  8.40%    3.131      1 Template:Button
+  8.30%    3.094      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224510 and revision id 1736701. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224547 and revision id 1736705. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
