--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -38,7 +38,9 @@
 </p>
 <meta property="mw:PageProp/toc">
 <h2><span id="Vestav.C4.9Bn.C3.A9_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Vestav&#283;n&eacute;_pracovn&iacute;_plochy">Vestav&#283;n&eacute; pracovn&iacute; plochy</span></h2>
-<h3><span class="mw-headline" id="Current">Current</span></h3>
+<p><span id="Current"></span>
+</p>
+<h3><span id="Aktu.C3.A1ln.C3.AD"></span><span class="mw-headline" id="Aktu&aacute;ln&iacute;">Aktu&aacute;ln&iacute;</span></h3>
 <div class="mw-translate-fuzzy">
 <p>Dostupn&eacute; jsou n&aacute;sleduj&iacute;c&iacute; pracovn&iacute; plochy:
 </p>
@@ -102,13 +104,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224547
+Cached time: 20260111224623
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.279 seconds
-Preprocessor visited node count: 285/1000000
+CPU time usage: 0.105 seconds
+Real time usage: 0.182 seconds
+Preprocessor visited node count: 286/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
 Highest expansion depth: 5/100
@@ -118,18 +120,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.277      1 -total
- 25.96%    9.677      1 Template:Userdocnavi/cs
- 15.40%    5.741      3 Template:Version
- 14.52%    5.414      5 Template:Incode
- 13.47%    5.021      2 Template:VersionMinus
-  9.48%    3.533      2 Template:Docnav
-  9.14%    3.409      1 Template:MenuCommand
-  8.40%    3.131      1 Template:Button
-  8.30%    3.094      1 Template:Navigation_menu_2
+100.00%   16.520      1 -total
+ 35.27%    5.826      1 Template:Userdocnavi/cs
+ 17.60%    2.908      1 Template:MenuCommand
+ 13.87%    2.291      1 Template:Navigation_menu_2
+ 11.44%    1.890      2 Template:Docnav
+  9.24%    1.526      5 Template:Incode
+  8.36%    1.380      3 Template:Version
+  7.30%    1.206      2 Template:VersionMinus
+  6.02%    0.994      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224547 and revision id 1736705. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224622 and revision id 1736707. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
