--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -41,11 +41,8 @@
 <p><span id="Current"></span>
 </p>
 <h3><span id="Aktu.C3.A1ln.C3.AD"></span><span class="mw-headline" id="Aktu&aacute;ln&iacute;">Aktu&aacute;ln&iacute;</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Dostupn&eacute; jsou n&aacute;sleduj&iacute;c&iacute; pracovn&iacute; plochy:
-</p>
-</div>
-<p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Some rarely used workbenches are disabled by default. These are marked with <code>D</code> below. A disabled workbench can be enabled in the <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Disabled workbenches can still be activated via the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu of <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
+<p>N&iacute;&#382;e uveden&eacute; pracovn&iacute; plochy jsou sou&#269;&aacute;st&iacute; ka&#382;d&eacute; instalace FreeCADu.
+</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Some rarely used workbenches are disabled by default. These are marked with <code>D</code> below. A disabled workbench can be enabled in the <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Disabled workbenches can still be activated via the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu of <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. This is not really a workbench, but rather a category of 'standard' commands and tools that can be used in all workbenches.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> for building and solving mechanical assemblies. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
@@ -104,13 +101,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224623
+Cached time: 20260111224654
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.105 seconds
-Real time usage: 0.182 seconds
-Preprocessor visited node count: 286/1000000
+Real time usage: 0.163 seconds
+Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
 Highest expansion depth: 5/100
@@ -120,18 +117,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.520      1 -total
- 35.27%    5.826      1 Template:Userdocnavi/cs
- 17.60%    2.908      1 Template:MenuCommand
- 13.87%    2.291      1 Template:Navigation_menu_2
- 11.44%    1.890      2 Template:Docnav
-  9.24%    1.526      5 Template:Incode
-  8.36%    1.380      3 Template:Version
-  7.30%    1.206      2 Template:VersionMinus
-  6.02%    0.994      1 Template:Button
+100.00%   15.330      1 -total
+ 29.37%    4.503      1 Template:Userdocnavi/cs
+ 17.03%    2.611      2 Template:Docnav
+ 12.58%    1.928      1 Template:Navigation_menu_2
+ 11.98%    1.836      2 Template:VersionMinus
+ 11.76%    1.803      3 Template:Version
+  9.18%    1.407      5 Template:Incode
+  8.77%    1.345      1 Template:MenuCommand
+  6.72%    1.030      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224622 and revision id 1736707. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224654 and revision id 1736711. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
