--- a/wiki/de/IfcOpenShell.html
+++ b/wiki/de/IfcOpenShell.html
@@ -19,10 +19,9 @@
 </pre></div>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <p>IfcOpenShell kann auf verschiedene Arten installiert werden, je nach Betriebssystem und Python Umgebung. In der Vergangenheit war die Installation von IfcOpenShell etwas schwierig, da sie f&uuml;r dein spezifisches System kompiliert werden musste; seit diesem Beitrag (2020) ist es jedoch einfacher, sie zu verwenden, da sie nun zusammen mit FreeCAD in vielen FreeCAD Distributionen enthalten ist. Im Allgemeinen ist es ratsam, eine dieser vorkompilierten Distributionen zu verwenden und es nur selbst zu kompilieren, wenn du ein fortgeschrittener Benutzer bist.
+</p><p><span id="From_IfcOpenShell"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="From_IfcOpenShell">From IfcOpenShell</span></h3>
-</div>
+<h3><span class="mw-headline" id="Aus_IfcOpenShell">Aus IfcOpenShell</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>IfcOpenShell install page: <a rel="nofollow" class="external free" href="https://docs.ifcopenshell.org/ifcopenshell-python/installation.html">https://docs.ifcopenshell.org/ifcopenshell-python/installation.html</a>
 </p>
@@ -394,12 +393,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213135
+Cached time: 20260111225007
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.218 seconds
+CPU time usage: 0.133 seconds
+Real time usage: 0.190 seconds
 Preprocessor visited node count: 1316/1000000
 Post&#8208;expand include size: 38822/2097152 bytes
 Template argument size: 18650/2097152 bytes
@@ -410,18 +409,18 @@ Unstrip post&#8208;expand size: 31721/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.328      1 -total
- 25.12%   15.155      1 Template:BIM_Tools_navi/de
- 23.58%   14.223     38 Template:Code
- 18.47%   11.145      3 Template:Navigation_menu_2
- 17.32%   10.448      1 Template:Emphasis
- 10.34%    6.239      1 Template:FEM_Tools_navi/de
-  5.43%    3.274     57 Template:Incode
-  5.40%    3.257      1 Template:Userdocnavi/de
-  4.47%    2.697      1 Template:TOCright
+100.00%   46.627      1 -total
+ 33.33%   15.541      1 Template:BIM_Tools_navi/de
+ 22.48%   10.484     38 Template:Code
+ 19.16%    8.933      3 Template:Navigation_menu_2
+ 17.09%    7.969      1 Template:FEM_Tools_navi/de
+  5.88%    2.742     57 Template:Incode
+  4.66%    2.172      1 Template:Userdocnavi/de
+  3.05%    1.422      1 Template:TOCright
+  2.79%    1.303      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:238426-0!canonical and timestamp 20260111213135 and revision id 1736483. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:238426-0!canonical and timestamp 20260111225007 and revision id 1736715. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
