--- a/wiki/de/IfcOpenShell.html
+++ b/wiki/de/IfcOpenShell.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">IfcOpenShell/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-IfcOpenShell&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../IfcOpenShell.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="IfcOpenShell (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--med" title="IfcOpenShell (41% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--high" title="IfcOpenShell (98% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -22,11 +22,8 @@
 </p><p><span id="From_IfcOpenShell"></span>
 </p>
 <h3><span class="mw-headline" id="Aus_IfcOpenShell">Aus IfcOpenShell</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>IfcOpenShell install page: <a rel="nofollow" class="external free" href="https://docs.ifcopenshell.org/ifcopenshell-python/installation.html">https://docs.ifcopenshell.org/ifcopenshell-python/installation.html</a>
-</p>
-</div>
-<p><span id="Pip"></span>
+<p>IfcOpenShell-Installationsseite: <a rel="nofollow" class="external free" href="https://docs.ifcopenshell.org/ifcopenshell-python/installation.html">https://docs.ifcopenshell.org/ifcopenshell-python/installation.html</a>
+</p><p><span id="Pip"></span>
 </p>
 <h3><span class="mw-headline" id="Pip">Pip</span></h3>
 <p>Die einfachste M&ouml;glichkeit, IfcOpenShell zu installieren, ist die Verwendung von <a rel="nofollow" class="external text" href="https://pypi.org/project/pip/">pip</a>. Sobald pip auf dem System installiert ist, kann man IfcOpenShell ganz einfach <a rel="nofollow" class="external text" href="https://datatofish.com/install-package-python-using-pip/">installieren</a>, indem man in einem Terminalfenster folgenden Befehl eingibt:
@@ -393,34 +390,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111225007
+Cached time: 20260111225022
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.190 seconds
-Preprocessor visited node count: 1316/1000000
+CPU time usage: 0.122 seconds
+Real time usage: 0.155 seconds
+Preprocessor visited node count: 1315/1000000
 Post&#8208;expand include size: 38822/2097152 bytes
 Template argument size: 18650/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 38/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 31721/5000000 bytes
+Unstrip post&#8208;expand size: 31725/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.627      1 -total
- 33.33%   15.541      1 Template:BIM_Tools_navi/de
- 22.48%   10.484     38 Template:Code
- 19.16%    8.933      3 Template:Navigation_menu_2
- 17.09%    7.969      1 Template:FEM_Tools_navi/de
-  5.88%    2.742     57 Template:Incode
-  4.66%    2.172      1 Template:Userdocnavi/de
-  3.05%    1.422      1 Template:TOCright
-  2.79%    1.303      1 Template:Emphasis
+100.00%   34.918      1 -total
+ 25.46%    8.891     38 Template:Code
+ 24.58%    8.581      1 Template:BIM_Tools_navi/de
+ 18.31%    6.394      3 Template:Navigation_menu_2
+ 16.30%    5.690      1 Template:FEM_Tools_navi/de
+  7.25%    2.531     57 Template:Incode
+  4.56%    1.591      1 Template:Emphasis
+  4.28%    1.495      1 Template:TOCright
+  3.92%    1.369      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:238426-0!canonical and timestamp 20260111225007 and revision id 1736715. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:238426-0!canonical and timestamp 20260111225021 and revision id 1736717. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
