--- a/wiki/de/TechDraw_Annotation.html
+++ b/wiki/de/TechDraw_Annotation.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Annotation/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Annotation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_Annotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Annotation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Annotation (56% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_Annotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Annotazione (56% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -82,10 +82,8 @@
 <p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
-<div class="mw-translate-fuzzy">
 <p>Die Beschriftung &uuml;bernimmt alle anwendbaren grundlegenden Eigenschaften der Ansicht au&szlig;er <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Scale</b> (Ma&szlig;stab). Stattdessen wird die <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Text Size</b> (Schrifth&ouml;he) verwendet.
 </p>
-</div>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Text</b>: Der anzuzeigende Text.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Font</b>: Der Name der zu verwendenden Schriftart. F&uuml;r Beschriftungen wird die beste &Uuml;bereinstimmung der installierten Schriftarten verwenden.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Text Color</b>: Die Farbe des Textes.</li>
@@ -148,35 +146,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111222854
+Cached time: 20260111225133
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.107 seconds
-Preprocessor visited node count: 630/1000000
+CPU time usage: 0.096 seconds
+Real time usage: 0.308 seconds
+Preprocessor visited node count: 629/1000000
 Post&#8208;expand include size: 31180/2097152 bytes
 Template argument size: 11841/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2655/5000000 bytes
+Unstrip post&#8208;expand size: 2659/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.278      1 -total
- 19.41%    6.266      2 Template:Docnav/de
- 17.49%    5.645      1 Template:TechDraw_Tools_navi/de
- 13.98%    4.511      9 Template:PropertyData/de
- 11.98%    3.867      1 Template:Userdocnavi/de
- 11.09%    3.579      2 Template:Navigation_menu_2
-  9.02%    2.910      1 Template:GuiCommand/de
-  8.05%    2.600      9 Template:Variable
-  6.00%    1.936      1 Template:Code
-  5.00%    1.613      2 Template:Caption
+100.00%  109.425      1 -total
+ 28.77%   31.482      9 Template:PropertyData/de
+ 19.94%   21.819      9 Template:Variable
+ 16.47%   18.025      1 Template:TechDraw_Tools_navi/de
+ 11.00%   12.037      2 Template:Docnav/de
+  9.90%   10.835      1 Template:GuiCommand/de
+  9.09%    9.945      6 Template:Incode
+  9.03%    9.886      1 Template:Code
+  8.07%    8.827      2 Template:Navigation_menu_2
+  4.49%    4.916      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111222854 and revision id 1736647. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193912-0!canonical and timestamp 20260111225133 and revision id 1736719. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
