--- a/wiki/de/TechDraw_GeometricHatch.html
+++ b/wiki/de/TechDraw_GeometricHatch.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw GeometricHatch/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+GeometricHatch&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_GeometricHatch.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw GeometricHatch (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_GeometricHatch.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Hachures g&eacute;om&eacute;triques (67% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_GeometricHatch.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Tratteggio geometrico (67% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -55,11 +55,8 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<div class="mw-translate-fuzzy">
 <p>Das Werkzeug <b>TechDraw GeometrischeSchraffur</b> f&uuml;llt einen geschlossenen Bereich in einer Ansicht mit einem Muster, das auf der Spezifikation einer Autodesk-PAT-Schraffur basiert. Alternativ dazu verwendet das Werkzeug <span typeof="mw:File"><a href="../index.php?title=TechDraw_Hatch.svg&amp;filetimestamp=20240710131706&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Hatch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Hatch.html" title="TechDraw Hatch/de">TechDraw Schraffur</a> SVG-basierte Schraffurmuster. Siehe <a href="../de/TechDraw_Hatching.html" title="TechDraw Hatching/de">Schraffieren</a> f&uuml;r Einzelheiten.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_GeomHatch_example.png&amp;filetimestamp=20181126213349&amp;.html" class="mw-file-description"><img src="../File/TechDraw_GeomHatch_example.png" decoding="async" width="300" height="188" class="mw-file-element" data-file-width="342" data-file-height="214"></a></span>
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_GeomHatch_example.png&amp;filetimestamp=20181126213349&amp;.html" class="mw-file-description"><img src="../File/TechDraw_GeomHatch_example.png" decoding="async" width="300" height="188" class="mw-file-element" data-file-width="342" data-file-height="214"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Geometrisches Schraffurmuster auf einer Fl&auml;che</p>
 <p><span id="Usage"></span>
@@ -158,35 +155,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210108
+Cached time: 20260111225203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.170 seconds
-Preprocessor visited node count: 600/1000000
+CPU time usage: 0.109 seconds
+Real time usage: 0.702 seconds
+Preprocessor visited node count: 599/1000000
 Post&#8208;expand include size: 29727/2097152 bytes
 Template argument size: 11827/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 5438/5000000 bytes
+Unstrip post&#8208;expand size: 5442/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.716      1 -total
- 17.39%   11.078      4 Template:PropertyData/de
- 16.03%   10.215      1 Template:TechDraw_Tools_navi/de
- 11.40%    7.265      2 Template:PropertyView/de
- 10.16%    6.471      6 Template:Variable
-  7.89%    5.030      1 Template:Caption
-  6.77%    4.313      1 Template:FileName
-  6.47%    4.125      2 Template:Docnav/de
-  6.46%    4.119      1 Template:GuiCommand/de
-  6.32%    4.026      4 Template:Code
+100.00%  555.265      1 -total
+ 89.43%  496.595      4 Template:Code
+  2.15%   11.932      4 Template:PropertyData/de
+  1.98%   10.980      1 Template:TechDraw_Tools_navi/de
+  1.42%    7.874      6 Template:Variable
+  1.23%    6.842      2 Template:Navigation_menu_2
+  0.89%    4.963      1 Template:GuiCommand/de
+  0.72%    4.002      2 Template:PropertyView/de
+  0.71%    3.941      2 Template:Docnav/de
+  0.70%    3.896      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:203228-0!canonical and timestamp 20260111210108 and revision id 1736275. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:203228-0!canonical and timestamp 20260111225202 and revision id 1736721. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
