--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -42,7 +42,7 @@
 </p>
 <h3><span id="Aktu.C3.A1ln.C3.AD"></span><span class="mw-headline" id="Aktu&aacute;ln&iacute;">Aktu&aacute;ln&iacute;</span></h3>
 <p>N&iacute;&#382;e uveden&eacute; pracovn&iacute; plochy jsou sou&#269;&aacute;st&iacute; ka&#382;d&eacute; instalace FreeCADu.
-</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Some rarely used workbenches are disabled by default. These are marked with <code>D</code> below. A disabled workbench can be enabled in the <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Disabled workbenches can still be activated via the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu of <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
+</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: N&#283;kter&eacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; deaktivov&aacute;ny. Ty jsou n&iacute;&#382;e <code>D</code> ozna&#269;eny. Deaktivovanou pracovn&iacute; plochu lze aktivovat v <a href="../Preferences_Editor.html#Workbenches/cs" title="Preferences Editor">P&#345;edvolb&aacute;ch</a>. Deaktivovan&eacute; pracovn&iacute; plochy lze st&aacute;le aktivovat pomoc&iacute; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu <a href="../index.php?title=Std_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Workbench/cs (page does not exist)">TabBar slektoru Pracovn&iacute; plochy</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. This is not really a workbench, but rather a category of 'standard' commands and tools that can be used in all workbenches.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> for building and solving mechanical assemblies. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
@@ -101,12 +101,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111224654
+Cached time: 20260111225413
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.163 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.316 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -117,18 +117,18 @@ Unstrip post&#8208;expand size: 4246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.330      1 -total
- 29.37%    4.503      1 Template:Userdocnavi/cs
- 17.03%    2.611      2 Template:Docnav
- 12.58%    1.928      1 Template:Navigation_menu_2
- 11.98%    1.836      2 Template:VersionMinus
- 11.76%    1.803      3 Template:Version
-  9.18%    1.407      5 Template:Incode
-  8.77%    1.345      1 Template:MenuCommand
-  6.72%    1.030      1 Template:Button
+100.00%   30.657      1 -total
+ 34.22%   10.492      1 Template:Userdocnavi/cs
+ 18.37%    5.632      1 Template:MenuCommand
+ 14.40%    4.416      2 Template:Docnav
+ 11.13%    3.411      1 Template:Navigation_menu_2
+  9.28%    2.845      5 Template:Incode
+  8.37%    2.567      3 Template:Version
+  6.82%    2.090      1 Template:Button
+  5.52%    1.691      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111224654 and revision id 1736711. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260111225412 and revision id 1736723. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
